--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,10 +17,10 @@
    <widget class="QWidget" name="verticalLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>10</y>
-      <width>300</width>
-      <height>271</height>
+      <x>10</x>
+      <y>30</y>
+      <width>311</width>
+      <height>321</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout">
@@ -59,6 +59,13 @@
       <widget class="QPushButton" name="pushButton_5">
        <property name="text">
         <string>5. Giorno con maggiore numero di medaglie assegnate</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton_6">
+       <property name="text">
+        <string>6. Età media atlete vincitrici di un oro</string>
        </property>
       </widget>
      </item>
